@@ -1,3 +1,8 @@
+2012-09-11  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindOptionsTab.java (setDefaults): When noToolCombo
+	is set, the ATTR_TOOL attribute should be set to the tool variable and not the default memcheck tool.
+
 2012-09-05  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* .settings/.api_filters: New file.
